0.9.1
=====

Fixed calculation of relative TTLs
https://github.com/agoragames/kairos/pull/44

0.9.0
=====

Replace print statements with warnings for unsupported backends from @akabos
https://github.com/agoragames/kairos/pull/40

Added `Timeseries.bulk_insert` with optimized Redis and Mongo implementations
https://github.com/agoragames/kairos/pull/41

Fixed relative TTLs for Redis and Cassandra, fixng #14
https://github.com/agoragames/kairos/pull/42

0.8.1
=====

Implemented gevent-compatible Cassandra connection pooling.

Changed the API for Cassandra custom fetch functions.

Any value inserted into a timeseries of ascii, text, blob type will be 
auto-quoted with single quote.

Fixed mongo escaping of values with periods by replacing with "U+FFFF"
unicode character.

0.8.0
=====

Added support for Cassandra storage.

Added limits when querying properties of a SQL stat.

Changed behavior of sets to include storage of all datapoints, positive
or negative.

Added table name option to SQL stores.

0.7.1
=====

Added configuration options for columns in SQL stores.

Added `Timeseries.delete_all()` to delete all stats in a timeseries.

0.7.0
=====

Added `Timeseries.list()` to get all of the stat names in a store.

Added `Timeseries.properties()` to get some stats about a stat.

Added `Timeseries.iterate()` to iterate over all the data in a stat.

Added `Timeseries.expire()` to manually expire SQL data.

Changed data type to integer for gregorian time stamps. This will possibly 
require updates for any gregorian data already stored in mongo.

Tests can be skipped using environment variables.

SQL tests can target different host and driver types through SQL_HOST
environment variable.

SQL string columns (VARCHAR) have a fixed length of 255.

0.6.3
=====

Alpha support for SQL storage.

0.6.2
=====

Fix reference to interval when using a custom fetch function in mongo.

0.6.1
=====

Fix cases where keyword arguments are defined with "None".
