@@ -1,3 +1,10 @@
+rate
+====
+
+Added parameter "duration" to custom transforms to facilitate rate 
+calculations. This is a breaking change. Added more documentation on
+custom transforms.
+
 0.9.1
 =====
 
